Fixed overflow x on chrome

--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
     background-color: #3d3d3d;
     font-family: Monospace;
+    overflow-x: hidden;
   }
 
 
